# ESP32Sensor

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
Hardware Document/: ESP32LabSensor.eprj2
components/App_Tasks/: App_Tasks.c  CMakeLists.txt
components/App_Tasks/include/: App_Tasks.h
components/Json_Utils/: CMakeLists.txt  Json_Utils.c
components/KEY/: CMakeLists.txt  KEY.c
components/LCD_Driver/: CMakeLists.txt  Kconfig.projbuild  LCD_Driver.c
components/LED/: CMakeLists.txt  LED.c
components/Mqtt_Connect/: CMakeLists.txt  MQTT_FLOW.md  Mqtt_Connect.c
components/PressureSensor/: CMakeLists.txt  PRESSURE_SENSOR_FLOW.md  PressureSensor.c  PressureSensorProtocol.c
components/Sensor/: CMakeLists.txt  MODBUS_SENSOR_FLOW.md  Sensor.c
components/Timestamp/: CMakeLists.txt  Timestamp.c
components/UI/: CMakeLists.txt  SConscript  animations.c  animations.h  generated.mk  setup_screen_data_show_1.c  setup_screen_show_2.c  setup_screen_wait_ec_correct.c  setup_screen_wait_orp_correct.c  setup_screen_wait_ph_correct.c  setup_ui.c  setup_ui.h
components/UI/fonts/: lv_font_chinese_18.c  lv_front_song_Chinese_18.c
components/UI/images/: ec_1_60x62.c  light_1_60x62.c  orp_1_60x62.c  ph_1_60x62.c  pressure_0_60x62.c  pressure_0_62x63.c  salt_1_60x62.c  sg_1_60x62.c  tds_60x62.c  temp_1_60x62.c
components/Usb_Storage/: CMakeLists.txt  Usb_Storage.c
components/Wifi_Connect/: CMakeLists.txt  WIFI_FLOW.md  Wifi_Connect.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
www/: index.html
(+12 files in other folders)
